Adicionando e configurando micrometer